<resources>
    <string name="app_name">Tamenly</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Community</string>
    <string name="title_favorite">Vote</string>
    <string name="title_profile">Profile</string>
    <string name="signout_btn">SignOut</string>


    <string name="user_comments">Commnet</string>
    <string name="user_likes">Like</string>
    <string name="user_posts">Posts</string>
    <string name="user_name">User Name</string>
    <string name="user_rank">Rank</string>

    <string name="facebook_app_id">222166278339753</string>
    <string name="fb_login_protocol_scheme">fb222166278339753</string>

    <string name="hello_blank_fragment" translatable="false">Favorite Fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial">ca-app-pub-3940256099942544/1033173712</string>
    <string name="Native">ca-app-pub-3940256099942544/2247696110</string>
    <string name="comments_tab">Comments</string>
    <string name="post_tab">Post</string>
    <string name="votes_dialog">Votes</string>
    <string name="comments_dialog">Comments</string>
    <string name="posts_dialog">Posts</string>
    <string name="cars_catd">Cars</string>
    <string name="laptop_cards">Laptop</string>
    <string name="house_card">House</string>
    <string name="book_card">Book</string>
    <string name="smart_phone_card">Smart Phone</string>
    <string name="pc_card">PC</string>
    <string name="services_card">Services</string>
    <string name="tv_card">TV</string>
    <string name="from">From</string>
    <string name="amount">Amount</string>
    <string name="to">To</string>
    <string name="convert">CONVERT</string>
    <string name="egypt">Egypt</string>
    <string name="united_states">United States</string>
    <string name="europe">Europe</string>
    <string name="india">India</string>
    <string name="syria">Syria</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="united_arab_emirates">United Arab Emirates</string>
    <string name="palestine">Palestine</string>
    <string name="iraq">Iraq</string>
    <string name="yemen">Yemen</string>
    <string name="tamenly">Tamenly</string>
    <string name="username">Username</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="exception_code">Error: Exception Code =</string>
    <string name="no_more_posts1">No more Posts</string>
    <string name="something_went_wrong1">SomeThing Went Wrong :</string>
    <string name="error_code_b16">Error Code : B12</string>
    <string name="error_code_exception1">Error: Exception Code</string>
    <string name="something_went_wrong2">SomeThing Went Wrong :</string>
    <string name="something_went_wrong3">SomeThing Went Wrong :</string>
    <string name="errr_code_a14">Error Code = A14</string>
    <string name="error_exception_code4">Error: Exception Code</string>
    <string name="something_went_wrong5">SomeThing Went Wrong :</string>
    <string name="error_coe_l16">Error Code L16</string>
    <string name="error_code_exception6">Error: Exception Code</string>
    <string name="something_went_wrong6">SomeThing Went Wrong :</string>
    <string name="errorcode_m16">Error Code M16</string>
    <string name="error_exception">Error: Exception Code</string>
    <string name="something_went_wrong7">SomeThing Went Wrong :</string>
    <string name="error_code_p17">Error Code P17</string>
    <string name="error_exception_code">Error: Exception Code</string>
    <string name="no_more_posts3">No more Posts</string>
    <string name="some_thing_wentwrong">SomeThing Went Wrong :</string>
    <string name="error_code_s18">Error Code : S18</string>
    <string name="error_code_exception">Error: Exception Code</string>
    <string name="no_more_posts">No more Posts</string>
    <string name="something_went_wrong">SomeThing Went Wrong :</string>
    <string name="error_code_t19">Error Code : T 19</string>
    <string name="disable_adblock">Please Disable Adblock</string>
    <string name="chose_your_country">Chose your country</string>
    <string name="permission_ask">You need to Grant the permission so that you can Pick an Image</string>
    <string name="image_picks">You haven\'t picked Image</string>
    <string name="aasomethingwent_wrong">Something went wrong</string>
    <string name="fields_empty_message">Fields Cannot be Empty.</string>
    <string name="image_chose_message">Please Chose an Image</string>
    <string name="done">Posted Successfully</string>
    <string name="adblock_disble_message">Please Disable Adblock</string>
    <string name="close_adblock_message">Please Disable Adblock</string>
    <string name="login_with_facebook">Login With Facebook</string>


</resources>
