<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    tools:context="com.w4ma.soft.tamenly.MainFragments.ProfileF"
    android:background="#fff">




<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="#008b8c"
        android:orientation="vertical"
        android:layout_gravity="center">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/profile_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/user"
            android:elevation="@dimen/_3sdp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:layout_marginTop="30dp" />
        <TextView
            android:id="@+id/account_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="22dp"

            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/user_rank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_rank"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="13dp"
            android:layout_marginTop="4dp"/>
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="8dp">



            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/no1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="26"
                    android:textSize="16sp"
                    android:textColor="#009293"
                    android:gravity="center"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_comments"
                    android:textColor="#000"
                    android:gravity="center"/>
            </LinearLayout>


            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/lightgray"
                android:layout_margin="5dp"/>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/no2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="7"
                    android:textSize="16dp"
                    android:textColor="#009293"
                    android:gravity="center"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/channel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_likes"
                    android:textColor="#000"
                    android:gravity="center"/>
            </LinearLayout>


            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/lightgray"
                android:layout_margin="5dp"/>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/no3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="48"
                    android:textSize="16dp"
                    android:textColor="#009293"
                    android:gravity="center"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/bookmark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_posts"
                    android:textColor="#000"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>

</FrameLayout>
