<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.w4ma.soft.tamenly.MainFragments.Converter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4"
        android:background="#0E182F">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:textColor="#fff"
            android:text="0"
            android:id="@+id/txtResult"
            android:textSize="@dimen/_50sdp"
            android:typeface="serif"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardCornerRadius="@dimen/_6sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:elevation="@dimen/_6sdp"
            app:cardElevation="@dimen/_6sdp"
            android:layout_weight="3">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:padding="@dimen/_3sdp"
                    android:layout_height="@dimen/_60sdp">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/Amount"
                        android:hint="@string/amount"
                        android:inputType="number"
                        android:typeface="serif"
                        android:textColorHint="#0E182F"/>

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_16sdp"
                    android:text="@string/from"
                    android:textSize="18sp"
                    android:typeface="serif" />

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:scrollbars="vertical"
                    android:textSize="@dimen/_14sdp"
                    android:scrollbarFadeDuration="0"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:textColor="#000000"
                    android:id="@+id/spinnerFrom"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_margin="@dimen/_9sdp"
                    android:background="@color/lightgray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_16sdp"
                    android:text="@string/to"
                    android:textSize="18sp"
                    android:typeface="serif" />

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:textSize="@dimen/_14sdp"
                    android:scrollbarFadeDuration="0"
                    android:textColor="#000000"
                    android:scrollbars="vertical"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:autoSizeMinTextSize="@dimen/_14sdp"
                    android:id="@+id/spinnerTo"/>


            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/convert"
            android:textColor="#fff"
            android:id="@+id/btnConvert"
            android:textStyle="bold"
            android:background="@drawable/btncommentstyle"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_6sdp"/>
    </LinearLayout>
</FrameLayout>
