<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:padding="5dp"
    app:cardCornerRadius="@dimen/_6sdp"
    android:layout_gravity="center">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="350dp"
        android:layout_height="@dimen/_330sdp"
        android:background="@color/colorPrimaryDark"
        android:padding="5dp"
        android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:id="@+id/DialogUserImage"
            app:civ_shadow="true"
            app:civ_shadow_radius="8"
            android:src="@drawable/user"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/DialogtxtUserName"
            android:text="Elina Grofild"
            android:textStyle="bold"
            android:textColor="#fff"
            android:typeface="serif"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Online / Offline"
            android:textColor="#fff"
            android:typeface="serif"

            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="#f1c40f"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="100dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/DialogUserVotes"
                android:text="150"
                android:textSize="18sp"
                android:textColor="#fff"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/votes_dialog"
                android:typeface="serif"

                android:textSize="18sp"
                android:textColor="#fff"/>
        </LinearLayout>
        <LinearLayout
            android:background="#2ecc71"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="100dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="19"
                android:id="@+id/DialoUserComments"
                android:textSize="18sp"
                android:textColor="#fff"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comments_dialog"
                android:textSize="18sp"
                android:typeface="serif"
                android:textColor="#fff"/>
        </LinearLayout>
        <LinearLayout
            android:background="#3498db"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="100dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="50"
                android:textSize="18sp"
                android:id="@+id/DialogUserPosts"
                android:textColor="#fff"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posts_dialog"
                android:textSize="18sp"
                android:typeface="serif"
                android:textColor="#fff"/>

        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>