<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_2sdp"
    android:layout_marginStart="@dimen/_8sdp"
    android:layout_marginTop="@dimen/_8sdp"
    android:layout_marginEnd="@dimen/_8sdp"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">


            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/TheuserCommentProfilePicture"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:padding="@dimen/_3sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/user" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/CommentUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:drawablePadding="@dimen/_4sdp"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:paddingStart="@dimen/_3sdp"
                    android:text="@string/username"
                    android:textColor="#000"
                    android:textSize="@dimen/_12sdp"
                    tools:ignore="RtlSymmetry" />


                <TextView
                    android:id="@+id/CommentDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:drawablePadding="@dimen/_4sdp"
                    android:drawableStart="@drawable/ic_watch_later_black_24dp"
                    android:text="@string/date"
                    android:textColor="@color/lightgrayDarker"
                    android:textSize="@dimen/_9sdp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/heart_btnLove"
                    android:src="@drawable/like_b"/>

                <TextView
                    android:id="@+id/txtLikes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4sdp"
                    android:text="0"
                    android:textColor="#000"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/_12sdp"
                    android:typeface="serif" />

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:padding="@dimen/_5sdp"
            android:layout_margin="@dimen/_4sdp"
            android:background="@color/lightgray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_12sdp">



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/price"
                    android:textColor="#000"
                    android:typeface="serif"
                    android:drawableStart="@drawable/ic_monetization_on_black_24dp"
                    android:gravity="center"
                    android:textSize="@dimen/_16sdp"
                    android:id="@+id/SuggestedPrice"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:padding="@dimen/_5sdp"
                android:layout_margin="@dimen/_4sdp"
                android:background="@color/lightgray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Notes"
                    android:id="@+id/Notes"
                    android:typeface="serif"
                    android:drawableStart="@drawable/ic_description_black_24dp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:layout_margin="@dimen/_10sdp" />


        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>